src/objects/filegen__Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>filegen__ACH_Account_Number__c</fullName>
        <label>ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Account_Type__c</fullName>
        <label>ACH Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Debit_Amount__c</fullName>
        <label>ACH Debit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Debit_Day__c</fullName>
        <label>ACH Debit Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Drawer_Name__c</fullName>
        <label>ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_End_Date__c</fullName>
        <label>ACH End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Format__c</fullName>
        <label>ACH Format</label>
        <picklist>
            <picklistValues>
                <fullName>NACHA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Frequency__c</fullName>
        <label>ACH Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Next_Debit_Date__c</fullName>
        <label>ACH Next Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Relationship_Type__c</fullName>
        <label>ACH Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosigner2 Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Routing_Number__c</fullName>
        <label>ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__ACH_Start_Date__c</fullName>
        <label>ACH Start Date</label>
        <type>Date</type>
    </fields>
    <label>Filegen Loan Account</label>
    <nameField>
        <displayFormat>LAI-{0000000000}</displayFormat>
        <label>Loan Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filegen Loan Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>